--- a/package.json
+++ b/package.json
@@ -21,17 +21,24 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "latest",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@ngx-translate/core": "latest",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng-jhipster": "latest",
+    "ng2-webstorage": "latest",
+    "ngx-cookie": "latest",
+    "ngx-infinite-scroll": "latest",
     "ngx-pagination": "^3.2.1",
     "popper.js": "^1.14.5",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "sockjs-client": "latest",
     "underscore": "^1.9.1",
-    "zone.js": "~0.8.26",
-    "@ng-bootstrap/ng-bootstrap": "latest",
-    "@ngx-translate/core": "latest",
-    "ng2-webstorage": "latest"
+    "webstomp-client": "latest",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
@@ -42,6 +49,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.22",
     "@types/node": "~8.9.4",
+    "@types/sockjs-client": "^1.1.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
